# localstack-utils

./: README.md
.github/workflows/: test-bundle.yml  test-ls-on-k8s.yml  test-typedb.yml  test-wiremock.yml  test.yml
backstage/: localstack.backstage.yml
bundle-test/infra/: main.tf
cli-extensions/bundle-test/: main.tf
extensions/localstack-typedb/: .gitignore  Makefile
extensions/localstack-wiremock/: .gitignore
extensions/localstack-wiremock/localstack_wiremock/: extension.py
localstack-extension-typedb/: Makefile  README.md  pyproject.toml
localstack-extension-typedb/localstack_typedb/: extension.py
localstack-extension-typedb/localstack_typedb/utils/: docker.py
localstack-extension-typedb/tests/: test_extension.py
localstack-kiro-power/: POWER.md  mcp.json
localstack-typedb/: Makefile  README.md  pyproject.toml
localstack-typedb/localstack_typedb/: extension.py
localstack-typedb/localstack_typedb/utils/: docker.py  h2_proxy.py
localstack-typedb/tests/: test_extension.py
localstack-wiremock/: Makefile  README.md  pyproject.toml
localstack-wiremock/localstack_wiremock/: extension.py
localstack-wiremock/localstack_wiremock/utils/: docker.py
localstack-wiremock/sample-app/: main.tf
localstack-wiremock/sample-app/src/: handler.py
ls-k8s/: Makefile
ls-k8s/k8s/: values.yaml
ls-k8s/scripts/: cluster-down.sh  cluster-up.sh
ls-k8s/tests/: requirements.txt
ls-on-k8s/: Makefile
ls-on-k8s/k8s/: localstack.yaml
ls-on-k8s/scripts/: cluster-up.sh
ls-on-k8s/tests/: test_lambda.py
old/: test.sh
samples/aws-replicator-proxy/: .env.example  .gitignore  Makefile  README.md  proxy_config.yml
samples/aws-replicator-proxy/frontend/: index.html
sandbox-cli/: README.md
(+7 files in other folders)
