[build-system]
requires = ["setuptools", "wheel", "plux>=1.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "localstack-typedb-extension"
version = "0.1.0"
description = "LocalStack Extension: TypeDB on LocalStack"
readme = {file = "README.md", content-type = "text/markdown; charset=UTF-8"}
requires-python = ">=3.8"
authors = [
    { name = "LocalStack + TypeDB team"}
]
keywords = ["localstack", "localstack-extension", "extension"]
classifiers = []
dependencies = [
]

[project.urls]
Homepage = "https://github.com/whummer/localstack-utils"

[project.optional-dependencies]
dev = [
    "localstack",
    "ruff"
]

[project.entry-points."localstack.extensions"]
localstack_typedb = "localstack_typedb.extension:TypeDbExtension"
