[build-system]
requires = ["setuptools", "wheel", "plux>=1.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "localstack-wiremock"
version = "0.1.0"
description = "LocalStack Extension: WireMock on LocalStack"
readme = {file = "README.md", content-type = "text/markdown; charset=UTF-8"}
requires-python = ">=3.9"
authors = [
    { name = "LocalStack + WireMock team"}
]
keywords = ["LocalStack", "WireMock"]
classifiers = []
dependencies = [
    "priority"
]

[project.urls]
Homepage = "https://github.com/whummer/localstack-utils"

[project.optional-dependencies]
dev = [
    "boto3",
    "build",
    "jsonpatch",
    "localstack",
    "pytest",
    "rolo",
    "ruff",
    "twisted"
]

[project.entry-points."localstack.extensions"]
localstack-wiremock = "localstack_wiremock.extension:WireMockExtension"
